--- a/docs/sealdice/m522.md
+++ b/docs/sealdice/m522.md
@@ -6,19 +6,22 @@
 |随机|上述没提的|
 
 ## 掉线时务必注意！
-骰子掉线时请勿使用内置连接，请带上【ui链接】并【@群主】
+骰子掉线时请勿使用内置连接，请带上【ui链接】并【@】
 
 ### 为何不能用内置重连？
 自年前起内置连接便逐渐开始无法使用，就算连个八百遍都不定能连上去，分离部署暂且行得通，手机端正在内测的1.5版本支持内置连接但电脑端暂时无对应版本，其次内置长时间无法连接会一直吃CPU直到吃满，吃满会导致服务器崩溃
 
-### 连接分离只能喊【@群主】操作吗？
+### 连接分离只能喊【@】操作吗？
 目前阶段只能上服务器处理
 
 ### 分离扫码成功后如何从UI内部链接？
-【账号设置】→【+】→【账号类型：反向WS】→【账号：(对应QQ号)】→【连接地址：(删除4001并修改成@群主告诉的数字(需要保留最前面的英文冒号))】
+【账号设置】→【+】→【账号类型：反向WS】→【账号：(对应QQ号)】→【连接地址：(删除4001并修改成被告诉的数字(需要保留最前面的英文冒号))】
 
 ## UI链接无法打开？
-ip地址是否为45.133.16.37:ui？ui地址是否正确？切换网络/浏览器后依旧不可行？确认是核心出问题后请发送【ui链接】并【@群主】
+ip地址是否为45.133.16.37:ui？ui地址是否正确？切换网络/浏览器后依旧不可行？确认是核心出问题后请发送【ui链接】并【@】
+
+## 文件大小？
+尽量控制在600MB左右及以内
 
 ## 续费/费用？
 一个遗憾的消息，目前所使用的服务器涨价，月租自25年5月起将会从原本的费用涨至11~13/月
